Fixing header vertical alignment

--- a/apps/repl-web/src/components/sketch-metadata/style.module.css
+++ b/apps/repl-web/src/components/sketch-metadata/style.module.css
@@ -10,6 +10,7 @@
     list-style: none;
     user-select: none;
     padding-block: 0.625rem;
+    height: var(--app-editor-header-height);
 
     &::marker {
       display: none;
