--- a/apps/repl-web/src/styles/tokens.css
+++ b/apps/repl-web/src/styles/tokens.css
@@ -114,6 +114,7 @@
   --app-color-border-subtle: oklch(var(--app-color-neutral-50-lch) / 0.15);
   --app-color-border-strong: var(--app-color-neutral-50);
 
+  --app-editor-header-height: 3rem;
   --app-sidebar-width: 360px;
 
   &:has(body > div[data-theme='light']) {
